
* Added new config option 'show_statusbar' with default to true which
    defines should status bar be shown or hidden. It's controllable via
    menu 'View'->'Show Status Bar'.

* Added new menu option 'File'->'Create Symlink...' to create link(s) on
    the selected file(s) into some directory.

* Implemented a runtime option to open Find Files dialog window. It will
    not replace any other options, i.e. if used alone and no other window
    nor desktop manager is active, it will open new default window. It
    will not open any additional window if used when an other window or
    desktop manager is active though.


Changes on 1.1.0 since 1.0.1:

* Corrected underscores (mnemonics) on every menu and dialog.

* Migrated to new libfm APIs for simplification.

* Fixed GTK+ 3.0 compatibility problems. Added switch --with-gtk=N to
    configure script where N is GTK+ version: 2 or 3. Default is 2.

* Added option 'Treat backup files as hidden' into 'Display' tab of the
    preferences dialog and 'Use Application Startup Notify by default'
    into 'Advanced' tab. Both have effect with libfm 1.0.2 or newer.

* Added rintime option '--new-win' to open new window instead of new tab
    when started with some directory name.

* Added runtime option '--role' to set WM_WINDOW_ROLE property which can
    be used by window manager to do arrangement of window. Works only if
    option '--new-win' is also used.

* Added search engine support. Works if compiled with libfm-gtk >= 1.0.2.

* The items which cannot act (such as "Copy" when no items selected) now
    are disabled in menu and toolbar.

* Experimental implementation of option --one-screen to apply --desktop
    option only for one (current) X-Screen.

* Implemented side pane hiding, bound to 'F9' key press.


Changes on 1.0.1 since 1.0.0:

* Implemented basic multi-monitor support.

* Implemented toggling fullscreen mode via 'F11' key press.

* Added tab 'Layout' into Preferences dialog.

* Few lesser bugfixes.